# amatista

./: CMakeLists.txt  README.md
code/: LOC
code/amt/: CControl.h  built_in_control_type.h  control.cpp  control.h  default_ui_theme.cpp  default_ui_theme.h  main_window.h  mapped_ui_theme.cpp  mapped_ui_theme.h  ui_defaults.cpp  ui_defaults.h  ui_manager.cpp  ui_manager.h  ui_theme.h  window.h
code/amt/backend/: backend_main_window.h  backend_ui_manager.h
code/amt/backend/sdl2/: sdl2_main_window.cpp  sdl2_main_window.h  sdl2_ui_manager.cpp  sdl2_ui_manager.h
code/amt/events/: event.cpp  event.h  event_handler_list.h  property_changed_event.h  property_changed_event_handler.h
code/amt/geom/: bounds.cpp  bounds.h  color.cpp  color.h  dimension.cpp  dimension.h  position.cpp  position.h
